tests/sema/valid/imports.vit
space demo/imports;
use demo/math { * };
use demo/private_dep as dep;

proc main() -> int {
  give sum();
}
