tests/sema/invalid/missing_module.vit
space demo/app;
use demo/missing as missing;

proc main() -> int {
  give 0;
}
